--- a/net.ostis.confman.ui/resourses/MessagesBundle_en_GB.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle_en_GB.properties
@@ -24,3 +24,10 @@ professor = Professor
 title = conf.editor.field.title
 startDate = conf.editor.field.startdate
 endDate = conf.editor.field.enddate
+
+programCommitteeMember = Member of program committee\:
+exhibitionStand = Exhibition stand\:
+participationForm = Participation form\:
+residencePlace = Residence place\:
+meeting = Meeting\:
+housing = Housing\:
