--- a/net.ostis.confman.ui/resourses/MessagesBundle.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle.properties
@@ -25,9 +25,12 @@ title = conf.editor.field.title
 startDate = conf.editor.field.startdate
 endDate = conf.editor.field.enddate
 
-programCommitteeMember = Member of program committee\:
-exhibitionStand = Exhibition stand\:
+programCommitteeMember = Member of program committee
+exhibitionStand = Exhibition stand
 participationForm = Participation form\:
 residencePlace = Residence place\:
-meeting = Meeting\:
-housing = Housing\:
+meeting = Meeting
+housing = Housing
+
+street = Street\:
+houseNumber = House number\:
