--- a/net.ostis.confman.ui/resourses/MessagesBundle.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle.properties
@@ -21,16 +21,22 @@ senior = Senior Researcher
 docent = Docent
 professor = Professor
 
-title = conf.editor.field.title
-startDate = conf.editor.field.startdate
-endDate = conf.editor.field.enddate
+conference = conf.editor.field.conference
+conferenceTitle = conf.editor.field.title
+conferenceStartDate = conf.editor.field.startdate
+conferenceEndDate = conf.editor.field.enddate
+conferenceVenue = conf.editor.field.venue
 
-programCommitteeMember = Member of program committee
-exhibitionStand = Exhibition stand
+section = Section\:
+sectionTitle = Section title\:
+sectionData = Section data\:
+
+reportTitle = Report title\:
+mainAuthor = Main author\:
+
+programCommitteeMember = Member of program committee\:
+exhibitionStand = Exhibition stand\:
 participationForm = Participation form\:
 residencePlace = Residence place\:
-meeting = Meeting
-housing = Housing
-
-street = Street\:
-houseNumber = House number\:
+meeting = Meeting\:
+housing = Housing\:
