1) Added localization support for conference tree. 2) Added conf tree menu actions. 3) Added selection listener for tree.

--- a/net.ostis.confman.ui/resourses/MessagesBundle.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle.properties
@@ -34,3 +34,8 @@ housing = Housing
 
 street = Street\:
 houseNumber = House number\:
+
+ctxAddSection = Add Section
+ctxAddReport = Add Report
+ctxDeleteSection = Delete Section
+ctxDeleteReport = Delete Report
