--- a/net.ostis.confman.ui/resourses/MessagesBundle_en_GB.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle_en_GB.properties
@@ -34,3 +34,8 @@ housing = Housing
 
 street = Street\:
 houseNumber = House number\:
+
+ctxAddSection = Add Section
+ctxAddReport = Add Report
+ctxDeleteSection = Delete Section
+ctxDeleteReport = Delete Report
