Added localization for conference parts

--- a/net.ostis.confman.ui/resourses/MessagesBundle.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle.properties
@@ -25,6 +25,19 @@ title = conf.editor.field.title
 startDate = conf.editor.field.startdate
 endDate = conf.editor.field.enddate
 
+conference = conf.editor.field.conference
+conferenceTitle = conf.editor.field.title
+conferenceStartDate = conf.editor.field.startdate
+conferenceEndDate = conf.editor.field.enddate
+conferenceVenue = conf.editor.field.venue
+
+section = Section\:
+sectionTitle = Section title\:
+sectionData = Section data\:
+
+reportTitle = Report title\:
+mainAuthor = Main author\:
+
 programCommitteeMember = Member of program committee
 exhibitionStand = Exhibition stand
 participationForm = Participation form\:
