Added correct layouts, added combos in Report part,

--- a/net.ostis.confman.ui/resourses/MessagesBundle.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle.properties
@@ -33,7 +33,8 @@ conferenceVenue = conf.editor.field.venue
 
 section = Section\:
 sectionTitle = Section title\:
-sectionData = Section data\:
+sectionDate = Section data\:
+addReport = Add report
 
 reportTitle = Report title\:
 mainAuthor = Main author\:
