1) Added Report Dialog for Section Part. 2) Added TableViewer for Participant Part.

--- a/net.ostis.confman.ui/resourses/MessagesBundle.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle.properties
@@ -52,3 +52,17 @@ ctxAddSection = Add Section
 ctxAddReport = Add Report
 ctxDeleteSection = Delete Section
 ctxDeleteReport = Delete Report
+
+showReportDialog = Add report
+reportDialogTitle = Add report to the section
+reportDialogMessage = Select report below and press "OK"\n Note: after selection report already attached to section will be reattached to another section.
+reportDialogOKText = OK
+reportDialogCancelText = Cancel
+
+reportTableReport = Report
+reportTableAuthor = Author
+reportTableSection = Section
+
+participantTableAuthorName = Author
+participantTableConference = Conference
+participantTableParticipationRole = Participation Form
