--- a/net.ostis.confman.ui/resourses/MessagesBundle_en_GB.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle_en_GB.properties
@@ -35,6 +35,7 @@ section = Section\:
 sectionTitle = Section title\:
 sectionDate = Section data\:
 addReport = Add report
+selectDate = Select date
 
 reportTitle = Report title\:
 mainAuthor = Main author\:
