1) Added base for DateTimeWidget, 2) Added localization for button Add Report

--- a/net.ostis.confman.ui/resourses/MessagesBundle_en_GB.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle_en_GB.properties
@@ -54,3 +54,5 @@ ctxAddSection = Add Section
 ctxAddReport = Add Report
 ctxDeleteSection = Delete Section
 ctxDeleteReport = Delete Report
+
+showReportDialog = Add report
