Added pagination support for DynamicTable.

--- a/net.ostis.confman.ui/resourses/MessagesBundle.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle.properties
@@ -68,3 +68,9 @@ reportTableSection = Section
 participantTableAuthorName = Author
 participantTableConference = Conference
 participantTableParticipationRole = Participation Form
+
+pagingPrevBtn = Previous
+pagingNextBtn = Next
+pagingPage = Page 
+pagingOf = of 
+pagingItemCount = Items: 
