Added localization support of pagination.

--- a/net.ostis.confman.ui/resourses/MessagesBundle.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle.properties
@@ -74,3 +74,6 @@ pagingNextBtn = Next
 pagingPage = Page 
 pagingOf = of 
 pagingItemCount = Items: 
+pagingItemsPerPage = Items per page: 
+pagingFirstBtn = First
+pagingLastBtn = Last
