--- a/net.ostis.confman.ui/resourses/MessagesBundle_en_GB.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle_en_GB.properties
@@ -56,3 +56,24 @@ ctxDeleteSection = Delete Section
 ctxDeleteReport = Delete Report
 
 showReportDialog = Add report
+reportDialogTitle = Add report to the section
+reportDialogMessage = Select report below and press "OK"\n Note: after selection report already attached to section will be reattached to another section.
+reportDialogOKText = OK
+reportDialogCancelText = Cancel
+
+reportTableReport = Report
+reportTableAuthor = Author
+reportTableSection = Section
+
+participantTableAuthorName = Author
+participantTableConference = Conference
+participantTableParticipationRole = Participation Form
+
+pagingPrevBtn = Previous
+pagingNextBtn = Next
+pagingPage = Page 
+pagingOf = of 
+pagingItemCount = Items: 
+pagingItemsPerPage = Items per page: 
+pagingFirstBtn = First
+pagingLastBtn = Last
