Updated menu in tree view.

--- a/net.ostis.confman.ui/resourses/MessagesBundle.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle.properties
@@ -64,6 +64,7 @@ reportDialogCancelText = Cancel
 reportTableReport = Report
 reportTableAuthor = Author
 reportTableSection = Section
+reportTableConference = Conference
 
 participantTableAuthorName = Author
 participantTableConference = Conference
