updated EMail Perspective

--- a/net.ostis.confman.ui/resourses/MessagesBundle.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle.properties
@@ -78,3 +78,12 @@ pagingItemCount = Items:
 pagingItemsPerPage = Items per page: 
 pagingFirstBtn = First
 pagingLastBtn = Last
+
+templateLanguage = Template language
+templateName = Template name
+
+ruRU = Russian
+enGB = English
+enUS = American English
+
+nextStep = Next step
