--- a/net.ostis.confman.ui/resourses/MessagesBundle.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle.properties
@@ -87,5 +87,6 @@ enGB = English
 enUS = American English
 
 nextStep = Next step
+previousStep = Previous step
 
 participantTableSection = Participant section
