--- a/net.ostis.confman.ui/resourses/MessagesBundle_en_GB.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle_en_GB.properties
@@ -86,5 +86,6 @@ enGB = English
 enUS = American English
 
 nextStep = Next step
+previousStep = Previous step
 
 participantTableSection = Participant section
