--- a/net.ostis.confman.ui/resourses/MessagesBundle.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle.properties
@@ -90,3 +90,7 @@ nextStep = Next step
 previousStep = Previous step
 
 participantTableSection = Participant section
+
+warningDialogTitle = Warning dialog
+warningDialogMessage = Chose some information from table to continue!
+warningDialogOKText = Ok
