Section Time Table and Section Time Editor part

--- a/net.ostis.confman.ui/resourses/MessagesBundle_en_GB.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle_en_GB.properties
@@ -78,6 +78,13 @@ pagingItemsPerPage = Items per page:
 pagingFirstBtn = First
 pagingLastBtn = Last
 
+
+sectionTimeStart = Date of section start\: 
+sectionTimeChairman =  Time to the chairman (min)\:
+sectionTimeReport = Time of report (min)\:
+sectionTimePlenaryReport = Time of the plenary report (min)\:
+sectionTimeSmallBreak= Break between reports(min)\:
+
 templateLanguage = Template language
 templateName = Template name
 
