--- a/net.ostis.confman.ui/resourses/MessagesBundle.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle.properties
@@ -79,6 +79,12 @@ pagingItemsPerPage = Items per page:
 pagingFirstBtn = First
 pagingLastBtn = Last
 
+sectionTimeStart = Date of section start\: 
+sectionTimeChairman =  Time to the chairman (min)\:
+sectionTimeReport = Time of report (min)\:
+sectionTimePlenaryReport = Time of the plenary report (min)\:
+sectionTimeSmallBreak= Break between reports(min)\:
+
 templateLanguage = Template language
 templateName = Template name
 
