--- a/net.ostis.confman.ui/resourses/MessagesBundle_en_GB.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle_en_GB.properties
@@ -84,6 +84,8 @@ sectionTimeChairman =  Time to the chairman (min)\:
 sectionTimeReport = Time of report (min)\:
 sectionTimePlenaryReport = Time of the plenary report (min)\:
 sectionTimeSmallBreak= Break between reports(min)\:
+sectionTimeNumberCoffeeBreak = Number of coffee-breaks\:
+sectionTimeCoffeeBreak = Time of coffee-break\:
 
 templateLanguage = Template language
 templateName = Template name
