Added initial support for preferences.

--- a/net.ostis.confman.ui/OSGI-INF/l10n/bundle.properties
+++ b/net.ostis.confman.ui/OSGI-INF/l10n/bundle.properties
@@ -35,6 +35,7 @@ handledmenuitem.label.8 = Section Time Report
 menu.label.6 = Tools
 handledmenuitem.label.9 = Generate Section Report
 handledmenuitem.label.10 = Generate Sorted Member List
+handledmenuitem.label.11 = Preferences
 command.commandname.1 = quitCommand
 command.commandname.2 = openCommand
 command.commandname.3 = saveCommand
@@ -42,3 +43,4 @@ command.commandname.4 = aboutCommand
 command.commandname.5 = switchPerspective
 command.commandname.6 = saveReportCommand
 command.commandname.7 = generateSortedMemberList
+command.commandname.8 = showPreferencesDialog
