--- a/net.ostis.confman.ui/resourses/MessagesBundle.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle.properties
@@ -102,3 +102,14 @@ participantTableSection = Participant section
 warningDialogTitle = Warning dialog
 warningDialogMessage = Chose some information from table to continue!
 warningDialogOKText = Ok
+
+proxyPageTitle = Proxy Settings
+proxyIsEnabled = Use proxy
+proxyUserName = User Name (may be empty):
+proxyPassword = Password (may be empty):
+proxyHost = Proxy host:
+proxyPort = Proxy port:
+
+emailPreferences = Email Settings
+emailUserName = Account:
+emailPassword = Password:
