--- a/net.ostis.confman.ui/OSGI-INF/l10n/bundle_ru.properties
+++ b/net.ostis.confman.ui/OSGI-INF/l10n/bundle_ru.properties
@@ -19,6 +19,7 @@ perspective.label.4 = Email Management
 part.label.10 = \u0428\u0430\u0431\u043B\u043E\u043D\u044B \u043F\u0438\u0441\u0435\u043C
 part.label.11 = \u0423\u0447\u0430\u0441\u0442\u043D\u0438\u043A\u0438
 part.label.12 = \u0420\u0435\u0434\u0430\u043A\u0442\u043E\u0440 \u0428\u0430\u0431\u043B\u043E\u043D\u0430 \u041F\u0438\u0441\u044C\u043C\u0430
+menu.label.1 = \u0424\u0430\u0439\u043B
 handledmenuitem.label.1 = \u0420\u0430\u0437\u043E\u0431\u0440\u0430\u0442\u044C \u0437\u0430\u044F\u0432\u043A\u0443
 handledmenuitem.label.2 = \u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C
 handledmenuitem.label.3 = \u0412\u044B\u0445\u043E\u0434
@@ -34,6 +35,7 @@ handledmenuitem.label.8 = \u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0430
 menu.label.6 = \u0418\u043D\u0441\u0442\u0440\u0443\u043C\u0435\u043D\u0442\u044B
 handledmenuitem.label.9 = \u0421\u043E\u0437\u0434\u0430\u0442\u044C \u043E\u0442\u0447\u0435\u0442 \u043F\u043E \u0441\u0435\u043A\u0446\u0438\u044F\u043C
 handledmenuitem.label.10 = \u0421\u043E\u0437\u0434\u0430\u0442\u044C \u043E\u0442\u0447\u0435\u0442 \u0441 \u0443\u0447\u0430\u0441\u0442\u043D\u0438\u043A\u0430\u043C\u0438
+handledmenuitem.label.11 = \u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438
 command.commandname.1 = quitCommand
 command.commandname.2 = openCommand
 command.commandname.3 = saveCommand
@@ -41,3 +43,4 @@ command.commandname.4 = aboutCommand
 command.commandname.5 = switchPerspective
 command.commandname.6 = saveReportCommand
 command.commandname.7 = generateSortedMemberList
+command.commandname.8 = showPreferencesDialog
