Added perspective for report management and updated report editor part (added checkbox fields). Updated model and storage system.

--- a/net.ostis.confman.ui/OSGI-INF/l10n/bundle.properties
+++ b/net.ostis.confman.ui/OSGI-INF/l10n/bundle.properties
@@ -44,3 +44,6 @@ command.commandname.5 = switchPerspective
 command.commandname.6 = saveReportCommand
 command.commandname.7 = generateSortedMemberList
 command.commandname.8 = showPreferencesDialog
+handledmenuitem.label.9 = Report Management
+perspective.label.5 = Report Management
+part.label.13 = Report View
