--- a/net.ostis.confman.ui/resourses/MessagesBundle.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle.properties
@@ -39,6 +39,9 @@ selectDate = Select date
 
 reportTitle = Report title\:
 mainAuthor = Main author\:
+youngScientistReport = Young scientist report
+acceptReport = Accept report
+cancelReport = Cancel report
 
 programCommitteeMember = Member of program committee
 exhibitionStand = Exhibition stand
@@ -113,3 +116,9 @@ proxyPort = Proxy port:
 emailPreferences = Email Settings
 emailUserName = Account:
 emailPassword = Password:
+
+reportTableReportTitle = Report Title
+reportTableMainAuthor = Reporter
+reportTableAuthors = Authors
+reportTableEmptyElement = Empty
+
