added new menu button

--- a/net.ostis.confman.ui/OSGI-INF/l10n/bundle.properties
+++ b/net.ostis.confman.ui/OSGI-INF/l10n/bundle.properties
@@ -36,6 +36,7 @@ menu.label.6 = Tools
 handledmenuitem.label.9 = Generate Section Report
 handledmenuitem.label.10 = Generate Sorted Member List
 handledmenuitem.label.11 = Preferences
+handledmenuitem.label.12 = Generate Section Reports
 command.commandname.1 = quitCommand
 command.commandname.2 = openCommand
 command.commandname.3 = saveCommand
@@ -44,6 +45,7 @@ command.commandname.5 = switchPerspective
 command.commandname.6 = saveReportCommand
 command.commandname.7 = generateSortedMemberList
 command.commandname.8 = showPreferencesDialog
+command.commandname.9 = generateSectionReports
 handledmenuitem.label.9 = Report Management
 perspective.label.5 = Report Management
 part.label.13 = Report View
