--- a/net.ostis.confman.ui/OSGI-INF/l10n/bundle_ru.properties
+++ b/net.ostis.confman.ui/OSGI-INF/l10n/bundle_ru.properties
@@ -36,6 +36,7 @@ menu.label.6 = \u0418\u043D\u0441\u0442\u0440\u0443\u043C\u0435\u043D\u0442\u044
 handledmenuitem.label.9 = \u0421\u043E\u0437\u0434\u0430\u0442\u044C \u043E\u0442\u0447\u0435\u0442 \u043F\u043E \u0441\u0435\u043A\u0446\u0438\u044F\u043C
 handledmenuitem.label.10 = \u0421\u043E\u0437\u0434\u0430\u0442\u044C \u043E\u0442\u0447\u0435\u0442 \u0441 \u0443\u0447\u0430\u0441\u0442\u043D\u0438\u043A\u0430\u043C\u0438
 handledmenuitem.label.11 = \u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438
+handledmenuitem.label.12 = \u0421\u043E\u0437\u0434\u0430\u0442\u044C \u043E\u0442\u0447\u0451\u0442 \u0434\u043E\u043A\u043B\u0430\u0434\u043E\u0432 \u043F\u043E \u0441\u0435\u043A\u0446\u0438\u044F\u043C
 command.commandname.1 = quitCommand
 command.commandname.2 = openCommand
 command.commandname.3 = saveCommand
@@ -44,6 +45,7 @@ command.commandname.5 = switchPerspective
 command.commandname.6 = saveReportCommand
 command.commandname.7 = generateSortedMemberList
 command.commandname.8 = showPreferencesDialog
+command.commandname.9 = generateSectionReports
 handledmenuitem.label.9 = \u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u0435 \u0434\u043E\u043A\u043B\u0430\u0434\u043E\u0432
 perspective.label.5 = \u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u0435 \u0434\u043E\u043A\u043B\u0430\u0434\u043E\u0432
 part.label.13 = \u041F\u0440\u043E\u0441\u043C\u043E\u0442\u0440 \u0434\u043E\u043A\u043B\u0430\u0434\u043E\u0432
