added number of pages in ReportEditorPart

--- a/net.ostis.confman.ui/resourses/MessagesBundle.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle.properties
@@ -42,6 +42,7 @@ mainAuthor = Main author\:
 youngScientistReport = Young scientist report
 acceptReport = Accept report
 cancelReport = Cancel report
+numberOfPages = Number of pages\:
 
 programCommitteeMember = Member of program committee
 exhibitionStand = Exhibition stand
@@ -122,3 +123,4 @@ reportTableMainAuthor = Reporter
 reportTableAuthors = Authors
 reportTableEmptyElement = Empty
 
+fileWasCreated = file was created.
