--- a/net.ostis.confman.ui/resourses/MessagesBundle_en_GB.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle_en_GB.properties
@@ -39,6 +39,7 @@ selectDate = Select date
 
 reportTitle = Report title\:
 mainAuthor = Main author\:
+numberOfPages = Number of pages\:
 
 programCommitteeMember = Member of program committee
 exhibitionStand = Exhibition stand
@@ -102,3 +103,5 @@ participantTableSection = Participant section
 warningDialogTitle = Warning dialog
 warningDialogMessage = Chose some information from table to continue!
 warningDialogOKText = Ok
+
+fileWasCreated = file was created.
