--- a/net.ostis.confman.ui/resourses/MessagesBundle.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle.properties
@@ -124,3 +124,17 @@ reportTableAuthors = Authors
 reportTableEmptyElement = Empty
 
 fileWasCreated = file was created.
+
+pages = Number of pages
+orderOfAppearance = Order of appearance
+surname = Surname
+firstName = First name
+patronymic = Patronymic
+e_Mail = EMail
+reportHeader = Report header
+degreeTitle = Degree, title
+organization = Organization
+post = Post
+formOfParticipation = Form of participation
+addressOfLiving = Address
+totalNumberOfPages = Total number of pages
