--- a/net.ostis.confman.ui/resourses/MessagesBundle_en_GB.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle_en_GB.properties
@@ -105,3 +105,17 @@ warningDialogMessage = Chose some information from table to continue!
 warningDialogOKText = Ok
 
 fileWasCreated = file was created.
+
+pages = Number of pages
+orderOfAppearance = Order of appearance
+surname = Surname
+firstName = First name
+patronymic = Patronymic
+e_Mail = EMail
+reportHeader = Report header
+degreeTitle = Degree, title
+organization = Organization
+post = Post
+formOfParticipation = Form of participation
+addressOfLiving = Address
+totalNumberOfPages = Total number of pages
