issue: Report Module: Section Time Report: Provide corresponding menu and tool bar button which executes report generation url: https://github.com/Ivan-Zhukau/conforg-desktop/issues/43 In commit: 1) Clean up 2) Added localization of menu item.

--- a/net.ostis.confman.ui/OSGI-INF/l10n/bundle.properties
+++ b/net.ostis.confman.ui/OSGI-INF/l10n/bundle.properties
@@ -37,6 +37,7 @@ handledmenuitem.label.9 = Generate Section Report
 handledmenuitem.label.10 = Generate Sorted Member List
 handledmenuitem.label.11 = Preferences
 handledmenuitem.label.12 = Generate Section Reports
+handledmenuitem.label.13 = Generate Section Time Report
 command.commandname.1 = quitCommand
 command.commandname.2 = openCommand
 command.commandname.3 = saveCommand
