Issue #68 Выполнено: 1) необходимо добавить диалог для выбора файла для сохранения 2) переименовать меню в "Участники конференции" 3) В генерируемом файле необходимо добавить заголовок в таблице

--- a/net.ostis.confman.ui/OSGI-INF/l10n/bundle.properties
+++ b/net.ostis.confman.ui/OSGI-INF/l10n/bundle.properties
@@ -34,7 +34,7 @@ menu.label.5 = Report Managment
 handledmenuitem.label.8 = Section Time Report
 menu.label.6 = Tools
 handledmenuitem.label.9 = Generate Section Report
-handledmenuitem.label.10 = Generate Sorted Member List
+handledmenuitem.label.10 = Generate Participants of the conference
 handledmenuitem.label.11 = Preferences
 handledmenuitem.label.12 = Generate Section Reports
 handledmenuitem.label.13 = Generate Section Time Report
