--- a/net.ostis.confman.services/resourses/messages.properties
+++ b/net.ostis.confman.services/resourses/messages.properties
@@ -6,9 +6,12 @@ SectionServiceImpl.12=Form of participation
 SectionServiceImpl.13=Address
 SectionServiceImpl.2=Number of pages
 SectionServiceImpl.3=Order of appearance
-SectionServiceImpl.4=Surname
-SectionServiceImpl.5=First name
-SectionServiceImpl.6=Patronymic
+
+conference=Conference
+first_name=First name
+patronymic=Patronymic
+surname=Surname
+
 SectionServiceImpl.7=Email
 SectionServiceImpl.8=Report header
 SectionServiceImpl.9=Degree, title
