--- a/net.ostis.confman.ui/resourses/MessagesBundle.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle.properties
@@ -138,3 +138,7 @@ post = Post
 formOfParticipation = Form of participation
 addressOfLiving = Address
 totalNumberOfPages = Total number of pages
+
+defaultComboItem = Select
+reportParticipationForm = Report
+publicationParticipationForm = Publication
