--- a/net.ostis.confman.ui/resourses/MessagesBundle_ru_RU.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle_ru_RU.properties
@@ -121,3 +121,7 @@ post = \u0414\u043E\u043B\u0436\u043D\u043E\u0441\u0442\u044C
 formOfParticipation = \u0424\u043E\u0440\u043C\u0430 \u0443\u0447\u0430\u0441\u0442\u0438\u044F
 addressOfLiving = \u0410\u0434\u0440\u0435\u0441
 totalNumberOfPages = \u041E\u0431\u0449\u0435\u0435 \u0447\u0438\u0441\u043B\u043E \u0441\u0442\u0440\u0430\u043D\u0438\u0446
+
+defaultComboItem = \u041D\u0435 \u0432\u044B\u0431\u0440\u0430\u043D\u043E
+reportParticipationForm = \u0414\u043E\u043A\u043B\u0430\u0434 
+publicationParticipationForm = \u0422\u043E\u043B\u044C\u043A\u043E \u043F\u0443\u0431\u043B\u0438\u043A\u0430\u0446\u0438\u044F 
