1) «Редактирование докладов» переименовано в «Рецензирование». 2) Добавлена локализация к заголовкам таблицы "Просмотр докладов" в окне "Рецензирование"

--- a/net.ostis.confman.ui/OSGI-INF/l10n/bundle.properties
+++ b/net.ostis.confman.ui/OSGI-INF/l10n/bundle.properties
@@ -47,6 +47,6 @@ command.commandname.6 = saveReportCommand
 command.commandname.7 = generateSortedMemberList
 command.commandname.8 = showPreferencesDialog
 command.commandname.9 = generateSectionReports
-handledmenuitem.label.9 = Report Management
+handledmenuitem.label.14 = Reviewing
 perspective.label.5 = Report Management
 part.label.13 = Report View
