--- a/net.ostis.confman.ui/OSGI-INF/l10n/bundle_ru.properties
+++ b/net.ostis.confman.ui/OSGI-INF/l10n/bundle_ru.properties
@@ -47,6 +47,6 @@ command.commandname.6 = saveReportCommand
 command.commandname.7 = generateSortedMemberList
 command.commandname.8 = showPreferencesDialog
 command.commandname.9 = generateSectionReports
-handledmenuitem.label.9 = \u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u0435 \u0434\u043E\u043A\u043B\u0430\u0434\u043E\u0432
+handledmenuitem.label.14 = \u0420\u0435\u0446\u0435\u0437\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u0435
 perspective.label.5 = \u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u0435 \u0434\u043E\u043A\u043B\u0430\u0434\u043E\u0432
 part.label.13 = \u041F\u0440\u043E\u0441\u043C\u043E\u0442\u0440 \u0434\u043E\u043A\u043B\u0430\u0434\u043E\u0432
