--- a/net.ostis.confman.ui/resourses/MessagesBundle_en_GB.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle_en_GB.properties
@@ -68,6 +68,7 @@ reportTableSection = Section
 
 participantTableAuthorName = Author
 participantTableConference = Conference
+participantTableEmail = Email
 participantTableParticipationRole = Participation Form
 
 pagingPrevBtn = Previous
