--- a/net.ostis.confman.ui/resourses/MessagesBundle.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle.properties
@@ -72,6 +72,7 @@ reportTableConference = Conference
 
 participantTableAuthorName = Author
 participantTableConference = Conference
+participantTableEmail = Email
 participantTableParticipationRole = Participation Form
 
 pagingPrevBtn = Previous
