--- a/net.ostis.confman.ui/resourses/MessagesBundle.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle.properties
@@ -142,3 +142,12 @@ totalNumberOfPages = Total number of pages
 defaultComboItem = Select
 reportParticipationForm = Report
 publicationParticipationForm = Publication
+
+participationInConference = Participation In The Conference
+arrival = Arrival
+
+exhibitionStand = Exhibition Stand
+tourOfTheCityOfMinsk = Tour Of The City Of Minsk
+culturalProgram = Cultural Program
+eveningMeetingPC = Evening Meeting Of PC 
+hotelReservation = Hotel Reservation
