--- a/net.ostis.confman.services/resourses/messages.properties
+++ b/net.ostis.confman.services/resourses/messages.properties
@@ -8,6 +8,7 @@ SectionServiceImpl.2=Number of pages
 SectionServiceImpl.3=Order of appearance
 
 conference=Conference
+category=Category
 first_name=First name
 patronymic=Patronymic
 surname=Surname
