--- a/net.ostis.confman.ui/OSGI-INF/l10n/bundle.properties
+++ b/net.ostis.confman.ui/OSGI-INF/l10n/bundle.properties
@@ -52,3 +52,4 @@ command.commandname.9 = generateSectionReports
 command.commandname.10 = saveParticipantsByCategory
 perspective.label.5 = Report Management
 part.label.13 = Report View
+part.label.14 = New Participant
