--- a/net.ostis.confman.ui/OSGI-INF/l10n/bundle_ru.properties
+++ b/net.ostis.confman.ui/OSGI-INF/l10n/bundle_ru.properties
@@ -52,3 +52,4 @@ command.commandname.9 = generateSectionReports
 command.commandname.10 = saveParticipantsByCategory
 perspective.label.5 = \u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u0435 \u0434\u043E\u043A\u043B\u0430\u0434\u043E\u0432
 part.label.13 = \u041F\u0440\u043E\u0441\u043C\u043E\u0442\u0440 \u0434\u043E\u043A\u043B\u0430\u0434\u043E\u0432
+part.label.14 = \u041D\u043E\u0432\u044B\u0439 \u0443\u0447\u0430\u0441\u0442\u043D\u0438\u043A
