Issue #83 Реализована логика управления докладами, но вместо подсветки в таблице используется дополнительный столбец с индикаторами +/-, означающими принятие/отклонение доклада соответсвенно.

--- a/net.ostis.confman.ui/resourses/MessagesBundle.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle.properties
@@ -163,3 +163,5 @@ officialOrgCommittee = Official Organizing Committee
 studOrgCommittee = Student Organizing Committee
 invited = Invited
 representativeOfCoOrganizer = Representative Of The Co-Organizer
+
+reviewing = Reviewing
