--- a/net.ostis.confman.ui/resourses/MessagesBundle_en_GB.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle_en_GB.properties
@@ -144,3 +144,5 @@ officialOrgCommittee = Official Organizing Committee
 studOrgCommittee = Student Organizing Committee
 invited = Invited
 representativeOfCoOrganizer = Representative Of The Co-Organizer
+
+reviewing = Reviewing
