--- a/net.ostis.confman.ui/resourses/MessagesBundle.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle.properties
@@ -75,6 +75,9 @@ participantTableConference = Conference
 participantTableEmail = Email
 participantTableParticipationRole = Participation Form
 
+currentTemplateName = Current template:
+nonTemplateMessage = template doesn't exist!
+
 pagingPrevBtn = Previous
 pagingNextBtn = Next
 pagingPage = Page 
