--- a/net.ostis.confman.ui/resourses/MessagesBundle_en_GB.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle_en_GB.properties
@@ -71,6 +71,9 @@ participantTableConference = Conference
 participantTableEmail = Email
 participantTableParticipationRole = Participation Form
 
+currentTemplateName = Current template:
+nonTemplateMessage = template doesn't exist!
+
 pagingPrevBtn = Previous
 pagingNextBtn = Next
 pagingPage = Page 
