#70 section report name changed

--- a/net.ostis.confman.ui/OSGI-INF/l10n/bundle.properties
+++ b/net.ostis.confman.ui/OSGI-INF/l10n/bundle.properties
@@ -37,7 +37,7 @@ handledmenuitem.label.9 = Generate Section Report
 handledmenuitem.label.10 = Generate Participants of the conference
 handledmenuitem.label.11 = Preferences
 handledmenuitem.label.12 = Generate Section Reports
-handledmenuitem.label.13 = Generate Section Time Report
+handledmenuitem.label.13 = Section Reports
 handledmenuitem.label.14 = Reviewing
 handledmenuitem.label.15 = Generate Participants Sorted by Category
 command.commandname.1 = quitCommand
