#75 report plenary & contest fields added

--- a/net.ostis.confman.ui/resourses/MessagesBundle.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle.properties
@@ -42,6 +42,8 @@ mainAuthor = Main author\:
 youngScientistReport = Young scientist report
 acceptReport = Accept report
 cancelReport = Cancel report
+plenaryReport = Plenary report
+participationInContest = Participation in contest
 numberOfPages = Number of pages\:
 
 programCommitteeMember = Member of program committee
