#73 section labels updated

--- a/net.ostis.confman.ui/resourses/MessagesBundle.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle.properties
@@ -32,8 +32,9 @@ conferenceEndDate = conf.editor.field.enddate
 conferenceVenue = conf.editor.field.venue
 
 section = Section\:
+sectionPrefix = Section 
 sectionTitle = Section title\:
-sectionDate = Section data\:
+sectionDate = Start date\:
 addReport = Add report
 selectDate = Select date
 
