#71 ability to add a new conference implemented

--- a/net.ostis.confman.ui/OSGI-INF/l10n/bundle.properties
+++ b/net.ostis.confman.ui/OSGI-INF/l10n/bundle.properties
@@ -53,3 +53,5 @@ command.commandname.10 = saveParticipantsByCategory
 perspective.label.5 = Report Management
 part.label.13 = Report View
 part.label.14 = New Participant
+toolbar.conferences.view.create = Create conference
+toolbar.conferences.view.open = Open conference
