--- a/net.ostis.confman.ui/resourses/MessagesBundle.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle.properties
@@ -30,6 +30,18 @@ conferenceTitle = conf.editor.field.title
 conferenceStartDate = conf.editor.field.startdate
 conferenceEndDate = conf.editor.field.enddate
 conferenceVenue = conf.editor.field.venue
+createConference = Create conference
+deleteConference = Delete conference
+closeConference = Close conference
+
+# conference open&close captions 
+openConfDialogTitle = Open conference
+openConfDialogMessage = Select a conference you want to open
+openConfDialogOKText = Save
+openConfDialogCancelText = Cancel
+ctxCloseConf = Close conference
+ctxDeleteConf = Delete conference
+conferenceNameColumn = Conference Title
 
 section = Section\:
 sectionPrefix = Section 
