#84 participant arrival perspective added

--- a/net.ostis.confman.ui/OSGI-INF/l10n/bundle.properties
+++ b/net.ostis.confman.ui/OSGI-INF/l10n/bundle.properties
@@ -1,6 +1,6 @@
 
 trimmedwindow.label.1 = net.ostis.confman.ui
-perspective.label.1 = Participant Managment
+perspective.label.1 = Participant Management
 part.label.1 = TableViewPart
 part.label.2 = TableEditorPart
 part.label.3 = Extra participant information
@@ -27,10 +27,10 @@ menu.label.2 = Help
 handledmenuitem.label.4 = About
 menu.label.3 = Window
 menu.label.4 = Open Perspective
-handledmenuitem.label.5 = Conference Managment
-handledmenuitem.label.6 = Participant Managment
-handledmenuitem.label.7 = Email Managment
-menu.label.5 = Report Managment
+handledmenuitem.label.5 = Conference Management
+handledmenuitem.label.6 = Participant Management
+handledmenuitem.label.7 = Email Management
+menu.label.5 = Report Management
 handledmenuitem.label.8 = Section Time Report
 menu.label.6 = Tools
 handledmenuitem.label.9 = Generate Section Report
@@ -40,6 +40,7 @@ handledmenuitem.label.12 = Generate Section Reports
 handledmenuitem.label.13 = Section Reports
 handledmenuitem.label.14 = Reviewing
 handledmenuitem.label.15 = Generate Participants Sorted by Category
+handledmenuitem.label.16 = Participant Arrival
 command.commandname.1 = quitCommand
 command.commandname.2 = openCommand
 command.commandname.3 = saveCommand
@@ -51,7 +52,10 @@ command.commandname.8 = showPreferencesDialog
 command.commandname.9 = generateSectionReports
 command.commandname.10 = saveParticipantsByCategory
 perspective.label.5 = Report Management
+perspective.label.6 = Participant Arrival
 part.label.13 = Report View
 part.label.14 = New Participant
+part.label.15 = Participants
+part.label.16 = Arrival Details
 toolbar.conferences.view.create = Create conference
 toolbar.conferences.view.open = Open conference
