Added category field in TemplatesEditorPart and ParticipantsChoosePart

--- a/net.ostis.confman.ui/resourses/MessagesBundle_en_GB.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle_en_GB.properties
@@ -69,6 +69,7 @@ reportTableSection = Section
 participantTableAuthorName = Author
 participantTableConference = Conference
 participantTableEmail = Email
+participantTableCategory = Category
 participantTableParticipationRole = Participation Form
 
 currentTemplateName = Current template:
