--- a/net.ostis.confman.ui/resourses/MessagesBundle.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle.properties
@@ -88,6 +88,7 @@ reportTableConference = Conference
 participantTableAuthorName = Author
 participantTableConference = Conference
 participantTableEmail = Email
+participantTableCategory = Category
 participantTableParticipationRole = Participation Form
 
 currentTemplateName = Current template:
