--- a/net.ostis.confman.ui/resourses/MessagesBundle_ru_RU.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle_ru_RU.properties
@@ -83,6 +83,7 @@ reportTableSection = \u0421\u0435\u043A\u0446\u0438\u044F
 participantTableAuthorName = \u0410\u0432\u0442\u043E\u0440
 participantTableConference = \u041A\u043E\u043D\u0444\u0435\u0440\u0435\u043D\u0446\u0438\u044F
 participantTableEmail = \u0410\u0434\u0440\u0435\u0441 \u044D\u043B\u0435\u043A\u0442\u0440\u043E\u043D\u043D\u043E\u0439 \u043F\u043E\u0447\u0442\u044B
+participantTableCategory = \u041A\u0430\u0442\u0435\u0433\u043E\u0440\u0438\u044F \u0443\u0447\u0430\u0441\u0442\u043D\u0438\u043A\u0430
 participantTableParticipationRole = \u0424\u043E\u0440\u043C\u0430 \u0443\u0447\u0430\u0441\u0442\u0438\u044F
 
 currentTemplateName = \u0422\u0435\u043A\u0443\u0449\u0438\u0439 \u0448\u0430\u0431\u043B\u043E\u043D \u043F\u0438\u0441\u044C\u043C\u0430:
