Issue 92 and code clean up

--- a/net.ostis.confman.services/resourses/messages.properties
+++ b/net.ostis.confman.services/resourses/messages.properties
@@ -12,6 +12,10 @@ category=Category
 first_name=First name
 patronymic=Patronymic
 surname=Surname
+participant=Participant
+category=Category
+email=Email
+emailBody=Mail
 
 SectionServiceImpl.7=Email
 SectionServiceImpl.8=Report header
