added mail templates

--- a/net.ostis.confman.ui/OSGI-INF/l10n/bundle.properties
+++ b/net.ostis.confman.ui/OSGI-INF/l10n/bundle.properties
@@ -19,6 +19,7 @@ perspective.label.4 = Email Management
 part.label.10 = Email templates part
 part.label.11 = Participants part
 part.label.12 = Email template editor part
+part.label.15 = Conference part
 menu.label.1 = File
 handledmenuitem.label.1 = Open
 handledmenuitem.label.2 = Save
