--- a/net.ostis.confman.ui/OSGI-INF/l10n/bundle_ru.properties
+++ b/net.ostis.confman.ui/OSGI-INF/l10n/bundle_ru.properties
@@ -41,6 +41,7 @@ handledmenuitem.label.12 = \u0421\u043E\u0437\u0434\u0430\u0442\u044C \u043E\u04
 handledmenuitem.label.13 = \u0414\u043E\u043A\u043B\u0430\u0434\u044B \u043F\u043E \u0441\u0435\u043A\u0446\u0438\u044F\u043C
 handledmenuitem.label.14 = \u0420\u0435\u0446\u0435\u0437\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u0435
 handledmenuitem.label.15 = \u0421\u043E\u0437\u0434\u0430\u0442\u044C \u0441\u043F\u0438\u0441\u043E\u043A \u0443\u0447\u0430\u0441\u0442\u043D\u0438\u043A\u043E\u0432 \u043F\u043E \u043A\u0430\u0442\u0435\u0433\u043E\u0440\u0438\u044F\u043C
+handledmenuitem.label.16 = \u041F\u0440\u0438\u0431\u044B\u0442\u0438\u0435 \u0443\u0447\u0430\u0441\u0442\u043D\u0438\u043A\u043E\u0432
 command.commandname.1 = quitCommand
 command.commandname.2 = openCommand
 command.commandname.3 = saveCommand
@@ -52,7 +53,10 @@ command.commandname.8 = showPreferencesDialog
 command.commandname.9 = generateSectionReports
 command.commandname.10 = saveParticipantsByCategory
 perspective.label.5 = \u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u0435 \u0434\u043E\u043A\u043B\u0430\u0434\u043E\u0432
+perspective.label.6 = \u041F\u0440\u0438\u0431\u044B\u0442\u0438\u0435 \u0443\u0447\u0430\u0441\u0442\u043D\u0438\u043A\u043E\u0432
 part.label.13 = \u041F\u0440\u043E\u0441\u043C\u043E\u0442\u0440 \u0434\u043E\u043A\u043B\u0430\u0434\u043E\u0432
 part.label.14 = \u041D\u043E\u0432\u044B\u0439 \u0443\u0447\u0430\u0441\u0442\u043D\u0438\u043A
+part.label.15 = \u0423\u0447\u0430\u0441\u0442\u043D\u0438\u043A\u0438
+part.label.16 = \u0414\u0435\u0442\u0430\u043B\u0438 \u043F\u0440\u0438\u0431\u044B\u0442\u0438\u044F
 toolbar.conferences.view.create = \u0421\u043E\u0437\u0434\u0430\u0442\u044C \u043A\u043E\u043D\u0444\u0435\u0440\u0435\u043D\u0446\u0438\u044E
 toolbar.conferences.view.open = \u041E\u0442\u043A\u0440\u044B\u0442\u044C \u043A\u043E\u043D\u0444\u0435\u0440\u0435\u043D\u0446\u0438\u044E
