--- a/net.ostis.confman.ui/resourses/MessagesBundle.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle.properties
@@ -186,3 +186,8 @@ invited = Invited
 representativeOfCoOrganizer = Representative Of The Co-Organizer
 
 reviewing = Reviewing
+
+researchCompetitionEn = Competition research of young  scientists
+researchCompetitionRu = \u043A\u043E\u043D\u043A\u0443\u0440\u0441 \u043D\u0430\u0443\u0447\u043D\u044B\u0445 \u0434\u043E\u043A\u043B\u0430\u0434\u043E\u0432 \u043C\u043E\u043B\u043E\u0434\u044B\u0445  \u0443\u0447\u0451\u043D\u044B\u0445
+sowtwareCompetitionEn = Competition  software young Scientists 
+sowtwareCompetitionRu = \u043A\u043E\u043D\u043A\u0443\u0440\u0441 \u043F\u0440\u043E\u0433\u0440\u0430\u043C\u043C\u043D\u044B\u0445 \u043F\u0440\u043E\u0434\u0443\u043A\u0442\u043E\u0432  \u043C\u043E\u043B\u043E\u0434\u044B\u0445 \u0443\u0447\u0451\u043D\u044B\u0445
