select a conference dialog added

--- a/net.ostis.confman.ui/resourses/MessagesBundle.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle.properties
@@ -82,10 +82,21 @@ reportDialogMessage = Select report below and press "OK"\n Note: after selection
 reportDialogOKText = OK
 reportDialogCancelText = Cancel
 
+showConfDialog = Select conference
+confDialogTitle = Choose a conference
+confDialogMessage = Select conference below and press "OK"\n
+confDialogOKText = OK
+confDialogCancelText = Cancel
+
 reportTableReport = Report
 reportTableAuthor = Author
 reportTableSection = Section
 reportTableConference = Conference
+
+confTitle = Conference Title
+confStartDate = Date of start
+
+dateFormat = yyyy/MM/dd
 
 participantTableAuthorName = Author
 participantTableConference = Conference
