--- a/net.ostis.confman.ui/resourses/MessagesBundle_ru_RU.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle_ru_RU.properties
@@ -78,9 +78,20 @@ reportDialogMessage = \u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u0434\u0
 reportDialogOKText = \u041F\u0440\u0438\u043D\u044F\u0442\u044C
 reportDialogCancelText = \u041E\u0442\u043C\u0435\u043D\u0430
 
+showConfDialog = \u0412\u044B\u0431\u0440\u0430\u0442\u044C \u043A\u043E\u043D\u0444\u0435\u0440\u0435\u043D\u0446\u0438\u044E
+confDialogTitle = \u0412\u044B\u0431\u043E\u0440 \u043A\u043E\u043D\u0444\u0435\u0440\u0435\u043D\u0446\u0438\u0438
+confDialogMessage = \u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u043A\u043E\u0444\u0435\u0440\u0435\u043D\u0446\u0438\u044E, \u0432 \u043A\u043E\u043D\u0442\u0435\u043A\u0441\u0442\u0435 \u043A\u043E\u0442\u043E\u0440\u043E\u0439 \u0431\u0443\u0434\u0435\u0442 \u0438\u0441\u043F\u043E\u043B\u043D\u0435\u043D\u0430 \u043E\u043F\u0435\u0440\u0430\u0446\u0438\u044F
+confDialogOKText = \u041F\u0440\u0438\u043D\u044F\u0442\u044C
+confDialogCancelText = \u041E\u0442\u043C\u0435\u043D\u0430
+
 reportTableReport = \u0414\u043E\u043A\u043B\u0430\u0434
 reportTableAuthor = \u0410\u0432\u0442\u043E\u0440
 reportTableSection = \u0421\u0435\u043A\u0446\u0438\u044F
+
+confTitle = \u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435 \u043A\u043E\u043D\u0444\u0435\u0440\u0435\u043D\u0446\u0438\u0438
+confStartDate = \u0414\u0430\u0442\u0430 \u043D\u0430\u0447\u0430\u043B\u0430
+
+dateFormat = dd/MM/yyyy
 
 participantTableAuthorName = \u0410\u0432\u0442\u043E\u0440
 participantTableConference = \u041A\u043E\u043D\u0444\u0435\u0440\u0435\u043D\u0446\u0438\u044F
