#72 report&section sorting added

--- a/net.ostis.confman.ui/OSGI-INF/l10n/bundle.properties
+++ b/net.ostis.confman.ui/OSGI-INF/l10n/bundle.properties
@@ -60,3 +60,5 @@ part.label.15 = Participants
 part.label.16 = Arrival Details
 toolbar.conferences.view.create = Create conference
 toolbar.conferences.view.open = Open conference
+toolbar.conferences.view.up = Up
+toolbar.conferences.view.down = Down
