participant competitions selectbox disabled

--- a/net.ostis.confman.ui/resourses/MessagesBundle.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle.properties
@@ -175,6 +175,10 @@ culturalProgram = Cultural Program
 eveningMeetingPC = Evening Meeting Of PC 
 hotelReservation = Hotel Reservation
 
+participationInConferenceCompetitions = Participation in competitions conference
+competitionResearchOfYoungScientists = Competition research of young scientists
+competitionSoftwareYoungScientists = Competition software young Scientists
+
 programCommittee = Program Committee
 vip = VIP
 ordinaryParticipant = Ordinary Participant
