fixed participants report

--- a/net.ostis.confman.services/resourses/messages.properties
+++ b/net.ostis.confman.services/resourses/messages.properties
@@ -17,6 +17,15 @@ category=Category
 email=Email
 emailBody=Mail
 
+article_title=Article title
+phone=Contact phone
+acadimic_degree=Academic degree
+organization=Organization
+position=Position
+participation_form=Participation form
+address=Address
+competition_participate=Competition participate
+
 SectionServiceImpl.7=Email
 SectionServiceImpl.8=Report header
 SectionServiceImpl.9=Degree, title
