No ticket: conforg pre-release changes added

--- a/net.ostis.confman.ui/OSGI-INF/l10n/bundle.properties
+++ b/net.ostis.confman.ui/OSGI-INF/l10n/bundle.properties
@@ -56,7 +56,7 @@ perspective.label.5 = Report Management
 perspective.label.6 = Participant Arrival
 part.label.13 = Report View
 part.label.14 = New Participant
-part.label.15 = Participants
+part.label.15 = Conference
 part.label.16 = Arrival Details
 toolbar.conferences.view.create = Create conference
 toolbar.conferences.view.open = Open conference
