--- a/net.ostis.confman.ui/resourses/MessagesBundle.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle.properties
@@ -202,6 +202,8 @@ representativeOfCoOrganizer = Representative Of The Co-Organizer
 
 reviewing = Reviewing
 
+generateEmailedParticipantsExcel = Generate excel lis
+
 researchCompetitionEn = Competition research of young  scientists
 researchCompetitionRu = \u043A\u043E\u043D\u043A\u0443\u0440\u0441 \u043D\u0430\u0443\u0447\u043D\u044B\u0445 \u0434\u043E\u043A\u043B\u0430\u0434\u043E\u0432 \u043C\u043E\u043B\u043E\u0434\u044B\u0445  \u0443\u0447\u0451\u043D\u044B\u0445
 sowtwareCompetitionEn = Competition  software young Scientists 
