--- a/net.ostis.confman.ui/resourses/MessagesBundle_en_GB.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle_en_GB.properties
@@ -154,3 +154,5 @@ invited = Invited
 representativeOfCoOrganizer = Representative Of The Co-Organizer
 
 reviewing = Reviewing
+
+generateEmailedParticipantsExcel = Generate excel lis
