No ticket: empty model errors fixed

--- a/net.ostis.confman.ui/resourses/MessagesBundle_en_GB.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle_en_GB.properties
@@ -21,15 +21,15 @@ senior = Senior Researcher
 docent = Docent
 professor = Professor
 
-title = conf.editor.field.title
-startDate = conf.editor.field.startdate
-endDate = conf.editor.field.enddate
+title = Title
+startDate = Start Date
+endDate = End Date
 
-conference = conf.editor.field.conference
-conferenceTitle = conf.editor.field.title
-conferenceStartDate = conf.editor.field.startdate
-conferenceEndDate = conf.editor.field.enddate
-conferenceVenue = conf.editor.field.venue
+conference = Conference
+conferenceTitle = Title
+conferenceStartDate = Start Date
+conferenceEndDate = End Date
+conferenceVenue = Venue
 
 section = Section\:
 sectionTitle = Section title\:
