--- a/net.ostis.confman.ui/resourses/MessagesBundle_ru_RU.properties
+++ b/net.ostis.confman.ui/resourses/MessagesBundle_ru_RU.properties
@@ -87,6 +87,7 @@ confDialogCancelText = \u041E\u0442\u043C\u0435\u043D\u0430
 reportTableReport = \u0414\u043E\u043A\u043B\u0430\u0434
 reportTableAuthor = \u0410\u0432\u0442\u043E\u0440
 reportTableSection = \u0421\u0435\u043A\u0446\u0438\u044F
+reportTableConference = \u041A\u043E\u043D\u0444\u0435\u0440\u0435\u043D\u0446\u0438\u044F
 
 confTitle = \u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435 \u043A\u043E\u043D\u0444\u0435\u0440\u0435\u043D\u0446\u0438\u0438
 confStartDate = \u0414\u0430\u0442\u0430 \u043D\u0430\u0447\u0430\u043B\u0430
